--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <table class="table table-striped" bgcolor="#f6f6ef" style="border-collapse: inherit; margin-top: 10px;"  cellspacing="0">
+    <table *ngIf="news" class="table table-striped" bgcolor="#f6f6ef" style="border-collapse: inherit; margin-top: 10px;"  cellspacing="0">
       <thead>
           <tr bgcolor="#ff6600">
             <th>Comments</th>
