--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+   <button type="button" (click)="bookmark()" class="bookmark">Bookmark</button>
     <table *ngIf="news" class="table table-striped" bgcolor="#f6f6ef" style="border-collapse: inherit; margin-top: 10px;"  cellspacing="0">
       <thead>
           <tr bgcolor="#ff6600">
