--- a/src/styles.css
+++ b/src/styles.css
@@ -33,4 +33,10 @@ table {
     Position:absolute;
     right:120px;
 }
+.bookmark{
+    margin-top: 20px;
+    float: right;
+    margin-bottom: 10px;
+    color:  #ff6600;
+}
     
