--- a/src/styles.css
+++ b/src/styles.css
@@ -40,3 +40,11 @@ table {
     color:  #ff6600;
 }
     
+.arrow-up {
+    width: 0; 
+    height: 0; 
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+  
+    border-bottom: 5px solid #828282;
+  }
